--- a/index.html
+++ b/index.html
@@ -9,9 +9,99 @@
   </head>
 
   <body class="page__body">
-    <header class="page-header"></header>
-    <main class="main-index"></main>
-    <footer class="page-footer"></footer>
+    <header class="page-header wrapper">
+      <a class="page-header__logo logo" href="index.html">
+        <img class="logo__img" src="images/logo.svg" width="140" height="70" alt="Логотип курорта Седона">
+      </a>
+      <nav class="page-header__nav main-nav">
+        <ul class="main-nav__list site-nav">
+          <li class="site-nav__item">
+            <a class="site-nav__link" href="index.html">Главная</a>
+          </li>
+          <li class="site-nav__item">
+            <a class="site-nav__link" href="#">О седоне</a>
+          </li>
+          <li class="site-nav__item">
+            <a class="site-nav__link" href="#">Гостиницы</a>
+          </li>
+        </ul>
+        <ul class="main-nav__list user-nav">
+          <li class="user-nav__item">
+            <a class="user-nav__link" href="#"><span class="visually-hidden">Поиск</span></a>
+          </li>
+          <li class="user-nav__item">
+            <a class="user-nav__link" href="#"><span class="visually-hidden">Понравилось</span></a>
+          </li>
+          <li class="user-nav__item">
+            <a class="user-nav__link" href="#">Хочу сюда!</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main class="main-index wrapper">
+      <h1 class="visually-hidden">Сайт курорта Седона</h1>
+      <section class="invite">
+        <h2 class="visually-hidden">Приглашение в Седону</h2>
+        <p class="visually-hidden">Добро пожаловать в Седону, потому что Гранд-Каньон отстой</p>
+        <img class="invite__img" src="images/index-background.jpg">
+      </section>
+      <section class="advantages">
+        <h2 class="visually-hidden">Преимущества Седоны</h2>
+        <p class="advantages__slogan">Седона - небольшой городок в Аризоне, заслуживающий большего!</p>
+        <p class="advantages__intro">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон</p>
+        <ul class="advantages__list">
+          <li class="advantages__item">
+            <h3 class="advantages__title">Настоящий городок</h3>
+            <p class="advantages__description">Седона не аттракцион для туристов, там течёт своя жизнь</p>
+          </li>
+          <li class="advantages__item">
+            <img class="advantages__img" src="images/photo-1.jpg">
+          </li>
+          <li class="advantages__item">
+            <h3 class="advantages__title">Небольшая площадь</h3>
+            <p class="advantages__description">Все интересные места находятся очень близко</p>
+          </li>
+          <li class="advantages__item">
+            <h3 class="advantages__title">Красивая дорога</h3>
+            <p class="advantages__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </li>
+          <li class="advantages__item">
+            <h3 class="advantages__title">Мало туристов</h3>
+            <p class="advantages__description">Большинство едет в Гранд-Каньон и толпится там</p>
+          </li>
+          <li class="advantages__item">
+            <img class="advantages__img" src="images/photo-2.jpg">
+          </li>
+          <li class="advantages__item">
+            <h3 class="advantages__title">Там есть мост дьявола</h3>
+            <p class="advantages__description">Да, по нему можно пройти! Если вы осмелитесь, конечно!</p>
+          </li>
+        </ul>
+        <p class="advantages__slogan">Приезжайте в Седону отдохнуть в комфорте и уюте!</p>
+        <p class="advantages__intro">Опытный персонал и качественное обслуживание!</p>
+        <ul class="advantages__list">
+          <li class="advantages__item advantages__item--home">
+            <h3 class="advantages__title">Жильё</h3>
+            <p class="advantages__description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+          </li>
+          <li class="advantages__item advantages__item--eat">
+            <h3 class="advantages__title">Еда</h3>
+            <p class="advantages__description">Всегда заказывайте фирменый бургер,<br> вы не разочаруетесь!</p>
+          </li>
+          <li class="advantages__item advantages__item--gift">
+            <h3 class="advantages__title">Сувениры</h3>
+            <p class="advantages__description">Не только китайского,<br> но и местного производства!</p>
+          </li>
+        </ul>
+      </section>
+      <section class="hotel-seach">
+        <h2 class="visually-hidden">Бронирование отеля</h2>
+        <p class="hotel-seach__title">Заинтересовались?</p>
+        <p class="hotel-seach__text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <button class="hotel-seach__button button" type="button">Поиск гостиницы в Седоне</button>
+      </section>
+    </main>
+    <footer class="page-footer wrapper"></footer>
   </body>
 
 </html>
