--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <h2 class="visually-hidden">Форма подписки на рассылку</h2>
         <p class="subscribe__title">Подпишитесь на рассылку</p>
         <p class="subscribe__text">Только полезная информация и никакого спама, честное бойскаутское!</p>
-        <form class="subscribe__form">
+        <form class="subscribe__form" action="https://echo.htmlacademy.ru/" method="post">
           <label class="visually-hidden" for="subscribe-email">E-mail</label>
           <input class="subscribe__input" type="email" name="subscribe-email" id="subscribe-email" placeholder="Ваш e-mail" required>
           <button class="subscribe__button button" type="submit">Подписаться</button>
