--- a/booking.html
+++ b/booking.html
@@ -9,64 +9,99 @@
   </head>
 
   <body class="page__body"></body>
-    <header class="page-header wrapper">
-      <a class="page-header__logo logo" href="index.html">
-        <img class="logo__img" src="images/logo.svg" width="140" height="70" alt="Логотип курорта Седона">
-      </a>
-      <nav class="page-header__nav main-nav">
-        <ul class="main-nav__list site-nav">
-          <li class="site-nav__item">
-            <a class="site-nav__link" href="index.html">Главная</a>
-          </li>
-          <li class="site-nav__item">
-            <a class="site-nav__link" href="#">О седоне</a>
-          </li>
-          <li class="site-nav__item">
-            <a class="site-nav__link" href="#">Гостиницы</a>
-          </li>
-        </ul>
-        <ul class="main-nav__list user-nav">
-          <li class="user-nav__item">
-            <a class="user-nav__link" href="#"><span class="visually-hidden">Поиск</span></a>
-          </li>
-          <li class="user-nav__item">
-            <a class="user-nav__link" href="#"><span class="visually-hidden">Понравилось</span></a>
-          </li>
-          <li class="user-nav__item">
-            <a class="user-nav__link button button--brown" href="#">Хочу сюда!</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
-
-    <main class="main-index wrapper">
-    </main>
-
-    <footer class="page-footer wrapper">
-      <ul class="page-footer__list social">
-        <li class="social__item">
-          <a class="social__link">
-            <span class="visually-hidden">Мы в ВКонтакте</span>
-          </a>
+  <header class="page-header wrapper">
+    <a class="page-header__logo logo" href="index.html">
+      <img class="logo__img" src="images/logo.svg" width="140" height="70" alt="Логотип курорта Седона">
+    </a>
+    <nav class="page-header__nav main-nav">
+      <ul class="main-nav__list site-nav">
+        <li class="site-nav__item">
+          <a class="site-nav__link" href="index.html">Главная</a>
         </li>
-        <li class="social__item">
-          <a class="social__link">
-            <span class="visually-hidden">Мы в Телеграме</span>
-          </a>
+        <li class="site-nav__item">
+          <a class="site-nav__link" href="#">О седоне</a>
         </li>
-        <li class="social__item">
-          <a class="social__link">
-            <span class="visually-hidden">Мы в Ютубе</span>
-          </a>
+        <li class="site-nav__item">
+          <a class="site-nav__link" href="#">Гостиницы</a>
         </li>
       </ul>
-      <address class="page-footer__adress">
-        <a class="page-footer__phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-      </address>
-      <a class="page-footer__copyright">
-        <span class="visually-hidden">Логотип HTML Academy</span>
-      </a>
-    </footer>
+      <ul class="main-nav__list user-nav">
+        <li class="user-nav__item">
+          <a class="user-nav__link" href="#"><span class="visually-hidden">Поиск</span></a>
+        </li>
+        <li class="user-nav__item">
+          <a class="user-nav__link" href="#"><span class="visually-hidden">Понравилось</span></a>
+        </li>
+        <li class="user-nav__item">
+          <a class="user-nav__link button button--brown" href="#">Хочу сюда!</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+
+  <main class="main-catalog wrapper">
+    <div class="main-catalog__bg">
+      <header class="main-catalog__header">
+        <h1 class="main-catalog__title primiry-title">Гостиницы Седоны</h1>
+        <ul class="main-catalog__list breadcrumbs">
+          <li class="breadcrumbs__item">
+            <a class="breadcrumbs__link" href="index.html"></a>
+          </li>
+        </ul>
+      </header>
+      <section class="main-catalog__filter filter">
+        <h2 class="visually-hidden">Фильтр списка гостиниц</h2>
+        <form class="filter__form" action="https://echo.htmlacademy.ru/" method="post" id="filter-form"></form>
+      </section>
+    </div>
+    <section class="main-catalog__products products">
+      <header class="products__header sorting"></header>
+      <ul class="products__list">
+        <li class="products__item card"></li>
+      </ul>
+      <ul class="products__pagination pagination">
+        <li class="pagination__item">
+          <a class="pagination__link" href="#">1</a>
+        </li>
+      </ul>
+    </section>
+    <section class="subscribe">
+      <h2 class="visually-hidden">Форма подписки на рассылку</h2>
+      <p class="subscribe__title">Подпишитесь на рассылку</p>
+      <p class="subscribe__text">Только полезная информация и никакого спама, честное бойскаутское!</p>
+      <form class="subscribe__form" action="https://echo.htmlacademy.ru/" method="post" id="subscribe-form">
+        <label class="visually-hidden" for="subscribe-form-email">E-mail</label>
+        <input class="subscribe__input input" type="email" name="subscribe-email" id="subscribe-form-email" placeholder="Ваш e-mail" required>
+        <button class="subscribe__button button" type="submit">Подписаться</button>
+      </form>
+    </section>
+  </main>
+
+  <footer class="page-footer wrapper">
+    <ul class="page-footer__list social">
+      <li class="social__item">
+        <a class="social__link">
+          <span class="visually-hidden">Мы в ВКонтакте</span>
+        </a>
+      </li>
+      <li class="social__item">
+        <a class="social__link">
+          <span class="visually-hidden">Мы в Телеграме</span>
+        </a>
+      </li>
+      <li class="social__item">
+        <a class="social__link">
+          <span class="visually-hidden">Мы в Ютубе</span>
+        </a>
+      </li>
+    </ul>
+    <address class="page-footer__adress">
+      <a class="page-footer__phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+    </address>
+    <a class="page-footer__copyright">
+      <span class="visually-hidden">Логотип HTML Academy</span>
+    </a>
+  </footer>
   </body>
 
 </html>
