Добавил разметку формы поиска в booking

--- a/booking.html
+++ b/booking.html
@@ -45,13 +45,90 @@
         <h1 class="main-catalog__title primiry-title">Гостиницы Седоны</h1>
         <ul class="main-catalog__list breadcrumbs">
           <li class="breadcrumbs__item">
-            <a class="breadcrumbs__link" href="index.html"></a>
+            <a class="breadcrumbs__link" href="index.html"><span class="visually-hidden">Главная</span></a>
+          </li>
+          <li class="breadcrumbs__item">
+            <a class="breadcrumbs__link" href="booking.html">Гостиницы</a>
           </li>
         </ul>
       </header>
       <section class="main-catalog__filter filter">
         <h2 class="visually-hidden">Фильтр списка гостиниц</h2>
-        <form class="filter__form" action="https://echo.htmlacademy.ru/" method="post" id="filter-form"></form>
+        <form class="filter__form filter" action="https://echo.htmlacademy.ru/" method="post" id="filter-form">
+          <fieldset class="filter__group">
+            <legend class="filter__title">Инфраструктура</legend>
+            <ul class="filter__list">
+              <li class="filter__item">
+                <label class="control">
+                  <input class="control__input visually-hidden" type="checkbox" name="pool" checked>
+                  <span class="control__mark"></span>
+                  <span class="control__label">Бассейн</span>
+                </label>
+              </li>
+              <li class="filter__item">
+                <label class="control">
+                  <input class="control__input visually-hidden" type="checkbox" name="parking" checked>
+                  <span class="control__mark"></span>
+                  <span class="control__label">Парковка</span>
+                </label>
+              </li>
+              <li class="filter__item">
+                <label class="control">
+                  <input class="control__input visually-hidden" type="checkbox" name="wifi">
+                  <span class="control__mark"></span>
+                  <span class="control__label">Wi-Fi</span>
+                </label>
+              </li>
+            </ul>
+          </fieldset>
+          <fieldset class="filter__group">
+            <legend class="filter__title">Тип жилья:</legend>
+            <ul class="filter__list">
+              <li class="filter__item">
+                <label class="control">
+                  <input class="control__input visually-hidden" type="radio" name="hotel" checked>
+                  <span class="control__mark"></span>
+                  <span class="control__label">Гостиница</span>
+                </label>
+              </li>
+              <li class="filter__item">
+                <label class="control">
+                  <input class="control__input visually-hidden" type="radio" name="motel">
+                  <span class="control__mark"></span>
+                  <span class="control__label">Мотель</span>
+                </label>
+              </li>
+              <li class="filter__item">
+                <label class="control">
+                  <input class="control__input visually-hidden" type="radio" name="appart">
+                  <span class="control__mark"></span>
+                  <span class="control__label">Апартаменты</span>
+                </label>
+              </li>
+            </ul>
+          </fieldset>
+          <fieldset class="filter__group range">
+            <legend class="filter__title">Стоимость, ₽:</legend>
+            <div class="range__inputs">
+              <label class="range__label">
+                <input class="range__input" type="number" value="0" name="min-price">
+              </label>
+              <label class="range__label"></label>
+                <input class="range__input" type="number" value="9000" name="max-price">
+              </label>
+            </div>
+            <div class="range__scale">
+              <div class="range__bar" style="right: 70px; width: 226px;">
+                <button class="range__toggle range__toggle--min" type="button"></button>
+                <button class="range__toggle range__toggle--max" type="button"></button>
+              </div>
+            </div>
+          </fieldset>
+          <div class="filter__buttons">
+            <button class="filter__button button" type="submit">Применить</button>
+            <button class="filter__button button button--trans" type="reset">Сбросить</button>
+          </div>
+        </form>
       </section>
     </div>
     <section class="main-catalog__products products">
