--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
   <body class="page__body">
     <header class="page-header wrapper">
-      <a class="page-header__logo logo" href="index.html">
+      <a class="page-header__logo logo" href="#">
         <img class="logo__img" src="images/logo.svg" width="140" height="70" alt="Логотип курорта Седона">
       </a>
       <nav class="page-header__nav main-nav">
         <ul class="main-nav__list site-nav">
           <li class="site-nav__item">
-            <a class="site-nav__link" href="index.html">Главная</a>
+            <a class="site-nav__link" href="#">Главная</a>
           </li>
           <li class="site-nav__item">
             <a class="site-nav__link" href="#">О седоне</a>
@@ -33,7 +33,7 @@
             <a class="user-nav__link" href="#"><span class="visually-hidden">Понравилось</span></a>
           </li>
           <li class="user-nav__item">
-            <a class="user-nav__link button button--brown" href="#">Хочу сюда!</a>
+            <a class="user-nav__link button button--brown" href="booking.html">Хочу сюда!</a>
           </li>
         </ul>
       </nav>
@@ -99,7 +99,7 @@
         <h2 class="visually-hidden">Бронирование отеля</h2>
         <p class="hotel-seach__title">Заинтересовались?</p>
         <p class="hotel-seach__text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a class="hotel-seach__link button button--brown" href="#">Поиск гостиницы в Седоне</a>
+        <a class="hotel-seach__link button button--brown" href="booking.html">Поиск гостиницы в Седоне</a>
       </section>
       <section class="subscribe subscribe--bg">
         <h2 class="visually-hidden">Форма подписки на рассылку</h2>
