Внёс правки в разметку по результатам разбора ДЗ#2

--- a/booking.html
+++ b/booking.html
@@ -40,97 +40,94 @@
     </header>
 
     <main class="main-catalog wrapper">
-      <div class="main-catalog__bg">
-        <header class="main-catalog__header">
-          <h1 class="main-catalog__title primiry-title">Гостиницы Седоны</h1>
-          <ul class="main-catalog__list breadcrumbs">
-            <li class="breadcrumbs__item">
-              <a class="breadcrumbs__link" href="index.html"><span class="visually-hidden">Главная</span></a>
-            </li>
-            <li class="breadcrumbs__item">
-              <a class="breadcrumbs__link" href="booking.html">Гостиницы</a>
-            </li>
-          </ul>
-        </header>
-        <section class="main-catalog__filter filter">
-          <h2 class="visually-hidden">Фильтр списка гостиниц</h2>
-          <form class="filter__form filter" action="https://echo.htmlacademy.ru/" method="get" id="filter-form">
-            <fieldset class="filter__group">
-              <legend class="filter__title">Инфраструктура</legend>
-              <ul class="filter__list">
-                <li class="filter__item">
-                  <label class="control">
-                    <input class="control__input visually-hidden" type="checkbox" name="pool" checked>
-                    <span class="control__mark"></span>
-                    <span class="control__label">Бассейн</span>
-                  </label>
-                </li>
-                <li class="filter__item">
-                  <label class="control">
-                    <input class="control__input visually-hidden" type="checkbox" name="parking" checked>
-                    <span class="control__mark"></span>
-                    <span class="control__label">Парковка</span>
-                  </label>
-                </li>
-                <li class="filter__item">
-                  <label class="control">
-                    <input class="control__input visually-hidden" type="checkbox" name="wifi">
-                    <span class="control__mark"></span>
-                    <span class="control__label">Wi-Fi</span>
-                  </label>
-                </li>
-              </ul>
-            </fieldset>
-            <fieldset class="filter__group">
-              <legend class="filter__title">Тип жилья:</legend>
-              <ul class="filter__list">
-                <li class="filter__item">
-                  <label class="control">
-                    <input class="control__input visually-hidden" type="radio" name="hotel" checked>
-                    <span class="control__mark"></span>
-                    <span class="control__label">Гостиница</span>
-                  </label>
-                </li>
-                <li class="filter__item">
-                  <label class="control">
-                    <input class="control__input visually-hidden" type="radio" name="motel">
-                    <span class="control__mark"></span>
-                    <span class="control__label">Мотель</span>
-                  </label>
-                </li>
-                <li class="filter__item">
-                  <label class="control">
-                    <input class="control__input visually-hidden" type="radio" name="appart">
-                    <span class="control__mark"></span>
-                    <span class="control__label">Апартаменты</span>
-                  </label>
-                </li>
-              </ul>
-            </fieldset>
-            <fieldset class="filter__group range">
-              <legend class="filter__title">Стоимость, ₽:</legend>
-              <div class="range__inputs">
-                <label class="range__label">
-                  <input class="range__input" type="number" value="0" name="min-price">
+      <header class="main-catalog__header">
+        <h1 class="main-catalog__title primiry-title">Гостиницы Седоны</h1>
+        <ul class="main-catalog__list breadcrumbs">
+          <li class="breadcrumbs__item">
+            <a class="breadcrumbs__link" href="index.html"><span class="visually-hidden">Главная</span></a>
+          </li>
+          <li class="breadcrumbs__item">
+            <a class="breadcrumbs__link" href="booking.html">Гостиницы</a>
+          </li>
+        </ul>
+        <h2 class="visually-hidden">Фильтр списка гостиниц</h2>
+        <form class="main-catalog__form filter" action="https://echo.htmlacademy.ru/" method="get" id="filter-form">
+          <fieldset class="filter__group">
+            <legend class="filter__title">Инфраструктура</legend>
+            <ul class="filter__list">
+              <li class="filter__item">
+                <label class="control">
+                  <input class="control__input visually-hidden" type="checkbox" name="pool" checked>
+                  <span class="control__mark"></span>
+                  <span class="control__label">Бассейн</span>
                 </label>
-                <label class="range__label">
-                  <input class="range__input" type="number" value="9000" name="max-price">
+              </li>
+              <li class="filter__item">
+                <label class="control">
+                  <input class="control__input visually-hidden" type="checkbox" name="parking" checked>
+                  <span class="control__mark"></span>
+                  <span class="control__label">Парковка</span>
                 </label>
-              </div>
-              <div class="range__scale">
-                <div class="range__bar" style="right: 70px; width: 226px;">
-                  <button class="range__toggle range__toggle--min" type="button"></button>
-                  <button class="range__toggle range__toggle--max" type="button"></button>
-                </div>
-              </div>
-            </fieldset>
-            <div class="filter__buttons">
-              <button class="filter__button button" type="submit">Применить</button>
-              <button class="filter__button button button--trans" type="reset">Сбросить</button>
+              </li>
+              <li class="filter__item">
+                <label class="control">
+                  <input class="control__input visually-hidden" type="checkbox" name="wifi">
+                  <span class="control__mark"></span>
+                  <span class="control__label">Wi-Fi</span>
+                </label>
+              </li>
+            </ul>
+          </fieldset>
+          <fieldset class="filter__group">
+            <legend class="filter__title">Тип жилья:</legend>
+            <ul class="filter__list">
+              <li class="filter__item">
+                <label class="control">
+                  <input class="control__input visually-hidden" type="radio" name="hotel" checked>
+                  <span class="control__mark"></span>
+                  <span class="control__label">Гостиница</span>
+                </label>
+              </li>
+              <li class="filter__item">
+                <label class="control">
+                  <input class="control__input visually-hidden" type="radio" name="motel">
+                  <span class="control__mark"></span>
+                  <span class="control__label">Мотель</span>
+                </label>
+              </li>
+              <li class="filter__item">
+                <label class="control">
+                  <input class="control__input visually-hidden" type="radio" name="appart">
+                  <span class="control__mark"></span>
+                  <span class="control__label">Апартаменты</span>
+                </label>
+              </li>
+            </ul>
+          </fieldset>
+          <fieldset class="filter__group range">
+            <legend class="filter__title">Стоимость, ₽:</legend>
+            <div class="range__inputs">
+              <label class="range__label">
+                <input class="range__input" type="number" value="0" name="min-price">
+              </label>
+              <label class="range__label">
+                <input class="range__input" type="number" value="9000" name="max-price">
+              </label>
             </div>
-          </form>
-        </section>
-      </div>
+            <div class="range__scale">
+              <div class="range__bar" style="right: 70px; width: 226px;">
+                <button class="range__toggle range__toggle--min" type="button"></button>
+                <button class="range__toggle range__toggle--max" type="button"></button>
+              </div>
+            </div>
+          </fieldset>
+          <fieldset class="filter__buttons">
+            <button class="filter__button button" type="submit">Применить</button>
+            <button class="filter__button button button--trans" type="reset">Сбросить</button>
+          </fieldset>
+        </form>
+      </header>
+
       <section class="main-catalog__products products">
         <header class="products__header seach-sorting">
           <div class="seach-sorting__quantity">
@@ -162,7 +159,7 @@
         </header>
         <ul class="products__list">
           <li class="products__item card">
-            <a class="card__link">
+            <a class="card__link" href="#">
               <img class="card__img" src="images/hotel-1.jpg" width="300" height="212"
                 alt="Вид на звёздное небо из ущелья">
               <h3 class="card__title">Amara Resort & Spa</h3>
@@ -181,7 +178,7 @@
             </div>
           </li>
           <li class="products__item card">
-            <a class="card__link">
+            <a class="card__link" href="#">
               <img class="card__img" src="images/hotel-2.jpg" width="300" height="212"
                 alt="Радуга над платово время грозы">
               <h3 class="card__title">Villas at Poco Diablo</h3>
@@ -200,7 +197,7 @@
             </div>
           </li>
           <li class="products__item card">
-            <a class="card__link">
+            <a class="card__link" href="#">
               <img class="card__img" src="images/hotel-3.jpg" width="300" height="212" alt="Вид на плато в ясный день">
               <h3 class="card__title">Desert Quail Inn</h3>
             </a>
@@ -218,7 +215,7 @@
             </div>
           </li>
           <li class="products__item card">
-            <a class="card__link">
+            <a class="card__link" href="#">
               <img class="card__img" src="images/hotel-4.jpg" width="300" height="212" alt="Вид на плато в ясную ночь">
               <h3 class="card__title">GreenTree Inn</h3>
             </a>
@@ -250,7 +247,7 @@
             <a class="pagination__link pagination__link--current" href="#">4</a>
           </li>
           <li class="pagination__item">
-            <a class="pagination__link pagination__link--current" href="#">...</a>
+            <p class="pagination__link pagination__link--current">...</p>
           </li>
           <li class="pagination__item">
             <a class="pagination__link pagination__link--current" href="#">10</a>
