--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
             <a class="user-nav__link" href="#"><span class="visually-hidden">Поиск</span></a>
           </li>
           <li class="user-nav__item">
-            <a class="user-nav__link" href="#"><span class="visually-hidden">Понравилось</span></a>
+            <a class="user-nav__link" href="#">
+              <span class="visually-hidden">Понравилось</span></a>
+              <span class="user-nav__badge">12</span>
           </li>
           <li class="user-nav__item">
             <a class="user-nav__link button button--brown" href="booking.html">Хочу сюда!</a>
@@ -44,7 +46,7 @@
       <section class="invite">
         <h2 class="visually-hidden">Приглашение в Седону</h1>
         <p class="visually-hidden">Добро пожаловать в Седону, потому что Гранд-Каньон отстой</p>
-        <img class="invite__img" src="images/index-background.jpg">
+        <img class="invite__img" src="images/index-background.jpg" width="1200" height="485" alt="Панорама гор Седоны">
       </section>
       <section class="advantages">
         <h2 class="visually-hidden">Преимущества Седоны</h2>
@@ -56,7 +58,7 @@
             <p class="advantages__description">Седона не аттракцион для туристов, там течёт своя жизнь</p>
           </li>
           <li class="advantages__item">
-            <img class="advantages__img" src="images/photo-1.jpg">
+            <img class="advantages__img" src="images/photo-1.jpg" width="800" height="385" alt="Вид на улицу Седоны">
           </li>
           <li class="advantages__item">
             <h3 class="advantages__title">Небольшая площадь</h3>
@@ -71,7 +73,7 @@
             <p class="advantages__description">Большинство едет в Гранд-Каньон и толпится там</p>
           </li>
           <li class="advantages__item">
-            <img class="advantages__img" src="images/photo-2.jpg">
+            <img class="advantages__img" src="images/photo-2.jpg" width="800" height="385" alt="Вид на мост Дьявола">
           </li>
           <li class="advantages__item">
             <h3 class="advantages__title">Там есть мост дьявола</h3>
@@ -95,11 +97,11 @@
           </li>
         </ul>
       </section>
-      <section class="hotel-seach">
+      <section class="seach">
         <h2 class="visually-hidden">Бронирование отеля</h2>
-        <p class="hotel-seach__title">Заинтересовались?</p>
-        <p class="hotel-seach__text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a class="hotel-seach__link button button--brown" href="booking.html">Поиск гостиницы в Седоне</a>
+        <p class="seach__title">Заинтересовались?</p>
+        <p class="seach__text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <a class="seach__link button button--brown" href="booking.html">Поиск гостиницы в Седоне</a>
       </section>
       <section class="subscribe subscribe--bg">
         <h2 class="visually-hidden">Форма подписки на рассылку</h2>
@@ -115,18 +117,18 @@
 
     <footer class="page-footer wrapper">
       <ul class="page-footer__list social">
-        <li class="social__item">
+        <li class="social__item" href="#">
           <a class="social__link">
             <span class="visually-hidden">Мы в ВКонтакте</span>
           </a>
         </li>
         <li class="social__item">
-          <a class="social__link">
+          <a class="social__link" href="#">
             <span class="visually-hidden">Мы в Телеграме</span>
           </a>
         </li>
         <li class="social__item">
-          <a class="social__link">
+          <a class="social__link" href="#">
             <span class="visually-hidden">Мы в Ютубе</span>
           </a>
         </li>
@@ -134,7 +136,7 @@
       <address class="page-footer__adress">
         <a class="page-footer__phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
       </address>
-      <a class="page-footer__copyright">
+      <a class="page-footer__copyright" href="#">
         <span class="visually-hidden">Логотип HTML Academy</span>
       </a>
     </footer>
