--- a/booking.html
+++ b/booking.html
@@ -47,7 +47,7 @@
             <a class="breadcrumbs__link" href="index.html"><span class="visually-hidden">Главная</span></a>
           </li>
           <li class="breadcrumbs__item">
-            <a class="breadcrumbs__link" href="booking.html">Гостиницы</a>
+            <a class="breadcrumbs__link" href="#">Гостиницы</a>
           </li>
         </ul>
         <h2 class="visually-hidden">Фильтр списка гостиниц</h2>
@@ -146,13 +146,13 @@
             <button class="visually-hidden" type="submit">Отсортировать продукты</button>
           </form>
           <div class="seach-sorting__view">
-            <a class="seach-sorting__toggle seach-sorting__toggle--current">
+            <a class="seach-sorting__toggle seach-sorting__toggle--current" href="#">
               <span class="visually-hidden">Таблица</span>
             </a>
-            <a class="seach-sorting__toggle seach-sorting__toggle--current">
+            <a class="seach-sorting__toggle seach-sorting__toggle--current" href="#">
               <span class="visually-hidden">Галерея</span>
             </a>
-            <a class="seach-sorting__toggle seach-sorting__toggle--current">
+            <a class="seach-sorting__toggle seach-sorting__toggle--current" href="#">
               <span class="visually-hidden">Список</span>
             </a>
           </div>
@@ -238,19 +238,19 @@
             <a class="pagination__link pagination__link--current" href="#">1</a>
           </li>
           <li class="pagination__item">
-            <a class="pagination__link pagination__link--current" href="#">2</a>
+            <a class="pagination__link" href="#">2</a>
           </li>
           <li class="pagination__item">
-            <a class="pagination__link pagination__link--current" href="#">3</a>
+            <a class="pagination__link" href="#">3</a>
           </li>
           <li class="pagination__item">
-            <a class="pagination__link pagination__link--current" href="#">4</a>
+            <a class="pagination__link" href="#">4</a>
           </li>
           <li class="pagination__item">
-            <p class="pagination__link pagination__link--current">...</p>
+            <p class="pagination__link">...</p>
           </li>
           <li class="pagination__item">
-            <a class="pagination__link pagination__link--current" href="#">10</a>
+            <a class="pagination__link" href="#">10</a>
           </li>
         </ul>
       </section>
@@ -270,17 +270,17 @@
     <footer class="page-footer wrapper">
       <ul class="page-footer__list social">
         <li class="social__item">
-          <a class="social__link">
+          <a class="social__link" href="#">
             <span class="visually-hidden">Мы в ВКонтакте</span>
           </a>
         </li>
         <li class="social__item">
-          <a class="social__link">
+          <a class="social__link" href="#">
             <span class="visually-hidden">Мы в Телеграме</span>
           </a>
         </li>
         <li class="social__item">
-          <a class="social__link">
+          <a class="social__link" href="#">
             <span class="visually-hidden">Мы в Ютубе</span>
           </a>
         </li>
@@ -288,7 +288,7 @@
       <address class="page-footer__adress">
         <a class="page-footer__phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
       </address>
-      <a class="page-footer__copyright">
+      <a class="page-footer__copyright" href="#">
         <span class="visually-hidden">Логотип HTML Academy</span>
       </a>
     </footer>
