--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
 
     <footer class="page-footer wrapper">
       <ul class="page-footer__list social">
-        <li class="social__item" href="#">
-          <a class="social__link">
+        <li class="social__item">
+          <a class="social__link" href="#">
             <span class="visually-hidden">Мы в ВКонтакте</span>
           </a>
         </li>
