Дополнил разметку Присвоил классы визуальным заголовкам, визуальным кнопкам

--- a/booking.html
+++ b/booking.html
@@ -33,7 +33,7 @@
             <a class="user-nav__link" href="#"><span class="visually-hidden">Понравилось</span></a>
           </li>
           <li class="user-nav__item">
-            <a class="user-nav__link button button--brown" href="#">Хочу сюда!</a>
+            <a class="user-nav__link button button--basic" href="#">Хочу сюда!</a>
           </li>
         </ul>
       </nav>
@@ -41,7 +41,7 @@
 
     <main class="main-catalog wrapper">
       <header class="main-catalog__header">
-        <h1 class="main-catalog__title primiry-title">Гостиницы Седоны</h1>
+        <h1 class="main-catalog__title first-title">Гостиницы Седоны</h1>
         <ul class="main-catalog__list breadcrumbs">
           <li class="breadcrumbs__item">
             <a class="breadcrumbs__link" href="index.html"><span class="visually-hidden">Главная</span></a>
@@ -122,7 +122,7 @@
             </div>
           </fieldset>
           <fieldset class="filter__buttons">
-            <button class="filter__button button" type="submit">Применить</button>
+            <button class="filter__button button button--second" type="submit">Применить</button>
             <button class="filter__button button button--trans" type="reset">Сбросить</button>
           </fieldset>
         </form>
@@ -131,7 +131,7 @@
       <section class="main-catalog__products products">
         <header class="products__header seach-sorting">
           <div class="seach-sorting__quantity">
-            <h2 class="seach-sorting__title">Найдено гостиниц: </h2>
+            <h2 class="seach-sorting__title second-title">Найдено гостиниц: </h2>
             <span class="seach-sorting__number">38</span>
           </div>
           <form class="seach-sorting__form" action="https://echo.htmlacademy.ru/" method="get" id="seach-sorting-form">
@@ -170,7 +170,7 @@
             </div>
             <div class="card__buttons">
               <a class="card__button button button--brown" href="#">Подробнее</a>
-              <button class="card__button button" type="button">В избранное</button>
+              <button class="card__button button button--second" type="button">В избранное</button>
             </div>
             <div class="card__metrics">
               <span class="card__stars">****</span>
@@ -188,8 +188,8 @@
               <span class="card__price">От 5000 ₽</span>
             </div>
             <div class="card__buttons">
-              <a class="card__button button button--brown" href="#">Подробнее</a>
-              <button class="card__button button button--green" type="button">В избранном</button>
+              <a class="card__button button button--basic" href="#">Подробнее</a>
+              <button class="card__button button button--select" type="button">В избранном</button>
             </div>
             <div class="card__metrics">
               <span class="card__stars">****</span>
@@ -206,8 +206,8 @@
               <span class="card__price">От 2500 ₽</span>
             </div>
             <div class="card__buttons">
-              <a class="card__button button button--brown" href="#">Подробнее</a>
-              <button class="card__button button" type="button">В избранное</button>
+              <a class="card__button button button--basic" href="#">Подробнее</a>
+              <button class="card__button button button--second" type="button">В избранное</button>
             </div>
             <div class="card__metrics">
               <span class="card__stars">***</span>
@@ -224,8 +224,8 @@
               <span class="card__price">От 1500 ₽</span>
             </div>
             <div class="card__buttons">
-              <a class="card__button button button--brown" href="#">Подробнее</a>
-              <button class="card__button button" type="button">В избранное</button>
+              <a class="card__button button button--basic" href="#">Подробнее</a>
+              <button class="card__button button button--second" type="button">В избранное</button>
             </div>
             <div class="card__metrics">
               <span class="card__stars">**</span>
@@ -256,13 +256,13 @@
       </section>
       <section class="subscribe">
         <h2 class="visually-hidden">Форма подписки на рассылку</h2>
-        <p class="subscribe__title">Подпишитесь на рассылку</p>
+        <p class="subscribe__title second-title>Подпишитесь на рассылку</p>
         <p class="subscribe__text">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="subscribe__form" action="https://echo.htmlacademy.ru/" method="post" id="subscribe-form">
           <label class="visually-hidden" for="subscribe-form-email">E-mail</label>
           <input class="subscribe__input input" type="email" name="subscribe-email" id="subscribe-form-email"
             placeholder="Ваш e-mail" required>
-          <button class="subscribe__button button" type="submit">Подписаться</button>
+          <button class="subscribe__button button button--second" type="submit">Подписаться</button>
         </form>
       </section>
     </main>
