--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
           </li>
           <li class="user-nav__item">
             <a class="user-nav__link" href="#">
-              <span class="visually-hidden">Понравилось</span></a>
+              <span class="visually-hidden">Понравилось</span>
               <span class="user-nav__badge">12</span>
+            </a>
           </li>
           <li class="user-nav__item">
-            <a class="user-nav__link button button--brown" href="booking.html">Хочу сюда!</a>
+            <a class="user-nav__link button button--basic" href="booking.html">Хочу сюда!</a>
           </li>
         </ul>
       </nav>
@@ -44,73 +45,75 @@
     <main class="main-index wrapper">
       <h1 class="visually-hidden">Сайт курорта Седона</h1>
       <section class="invite">
-        <h2 class="visually-hidden">Приглашение в Седону</h1>
+        <h2 class="visually-hidden">Приглашение в Седону</h2>
         <p class="visually-hidden">Добро пожаловать в Седону, потому что Гранд-Каньон отстой</p>
         <img class="invite__img" src="images/index-background.jpg" width="1200" height="485" alt="Панорама гор Седоны">
       </section>
       <section class="advantages">
         <h2 class="visually-hidden">Преимущества Седоны</h2>
-        <p class="advantages__slogan">Седона - небольшой городок в Аризоне, заслуживающий большего!</p>
+        <p class="advantages__slogan second-title">Седона - небольшой городок в Аризоне, заслуживающий большего!</p>
         <p class="advantages__intro">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон</p>
         <ul class="advantages__list">
           <li class="advantages__item">
-            <h3 class="advantages__title">Настоящий городок</h3>
+            <h3 class="advantages__title third-title">Настоящий городок</h3>
             <p class="advantages__description">Седона не аттракцион для туристов, там течёт своя жизнь</p>
           </li>
           <li class="advantages__item">
             <img class="advantages__img" src="images/photo-1.jpg" width="800" height="385" alt="Вид на улицу Седоны">
           </li>
           <li class="advantages__item">
-            <h3 class="advantages__title">Небольшая площадь</h3>
+            <h3 class="advantages__title third-title">Небольшая площадь</h3>
             <p class="advantages__description">Все интересные места находятся очень близко</p>
           </li>
           <li class="advantages__item">
-            <h3 class="advantages__title">Красивая дорога</h3>
+            <h3 class="advantages__title third-title">Красивая дорога</h3>
             <p class="advantages__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
           <li class="advantages__item">
-            <h3 class="advantages__title">Мало туристов</h3>
+            <h3 class="advantages__title third-title">Мало туристов</h3>
             <p class="advantages__description">Большинство едет в Гранд-Каньон и толпится там</p>
           </li>
           <li class="advantages__item">
             <img class="advantages__img" src="images/photo-2.jpg" width="800" height="385" alt="Вид на мост Дьявола">
           </li>
           <li class="advantages__item">
-            <h3 class="advantages__title">Там есть мост дьявола</h3>
+            <h3 class="advantages__title third-title">Там есть мост дьявола</h3>
             <p class="advantages__description">Да, по нему можно пройти! Если вы осмелитесь, конечно!</p>
           </li>
         </ul>
-        <p class="advantages__slogan">Приезжайте в Седону отдохнуть в комфорте и уюте!</p>
+        <p class="advantages__slogan second-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</p>
         <p class="advantages__intro">Опытный персонал и качественное обслуживание!</p>
         <ul class="advantages__list">
           <li class="advantages__item advantages__item--home">
-            <h3 class="advantages__title">Жильё</h3>
+            <h3 class="advantages__title third-title">Жильё</h3>
             <p class="advantages__description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
           </li>
           <li class="advantages__item advantages__item--eat">
-            <h3 class="advantages__title">Еда</h3>
+            <h3 class="advantages__title third-title">Еда</h3>
             <p class="advantages__description">Всегда заказывайте фирменый бургер,<br> вы не разочаруетесь!</p>
           </li>
           <li class="advantages__item advantages__item--gift">
-            <h3 class="advantages__title">Сувениры</h3>
+            <h3 class="advantages__title third-title">Сувениры</h3>
             <p class="advantages__description">Не только китайского,<br> но и местного производства!</p>
           </li>
         </ul>
       </section>
       <section class="seach">
         <h2 class="visually-hidden">Бронирование отеля</h2>
-        <p class="seach__title">Заинтересовались?</p>
-        <p class="seach__text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a class="seach__link button button--brown" href="booking.html">Поиск гостиницы в Седоне</a>
+        <p class="seach__title second-title">Заинтересовались?</p>
+        <p class="seach__text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в
+          Седоне</p>
+        <a class="seach__link button button--basic" href="booking.html">Поиск гостиницы в Седоне</a>
       </section>
       <section class="subscribe subscribe--bg">
         <h2 class="visually-hidden">Форма подписки на рассылку</h2>
-        <p class="subscribe__title">Подпишитесь на рассылку</p>
+        <p class="subscribe__title second-title">Подпишитесь на рассылку</p>
         <p class="subscribe__text">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="subscribe__form" action="https://echo.htmlacademy.ru/" method="post" id="subscribe-form">
           <label class="visually-hidden" for="subscribe-form-email">E-mail</label>
-          <input class="subscribe__input input" type="email" name="subscribe-email" id="subscribe-form-email" placeholder="Ваш e-mail" required>
-          <button class="subscribe__button button" type="submit">Подписаться</button>
+          <input class="subscribe__input input" type="email" name="subscribe-email" id="subscribe-form-email"
+            placeholder="Ваш e-mail" required>
+          <button class="subscribe__button button button--second" type="submit">Подписаться</button>
         </form>
       </section>
     </main>
